--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <div class="buttons" role="navigation" aria-label="Primary actions">
       <a class="btn gold" href="/estate.html">Kalki Estate</a>
-      <a class="btn ghost" href="/escapes.html">Kalki Escapes</a>
+      <a class="btn ghost" href="/escapes.html">Empire Escapes</a>
       <a class="btn small" href="mailto:operations@kalkiempire.com">Contact Operations</a>
       <a class="btn small" href="mailto:ceo@kalkiempire.com">Message CEO</a>
     </div>
